Train mlp_sgd_5

--- a/mlp_class.ipynb
+++ b/mlp_class.ipynb
@@ -2062,6 +2062,7 @@
     "n_hidden_2 = 256\n",
     "a_reg = 0.01\n",
     "dropout_prob = 0.3\n",
+    "\n",
     "# create model\n",
     "mlp_sgd_5 = keras.Sequential(name=\"MLP_SGD_5\")\n",
     "mlp_sgd_5.add(Input(shape=(num_features,)))\n",
@@ -2073,6 +2074,21 @@
     "mlp_sgd_5.add(tf.keras.layers.Dropout(dropout_prob))\n",
     "\n",
     "mlp_sgd_5.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compile model\n",
+    "mlp_sgd_5.compile(optimizer=tf.keras.optimizers.SGD(learning_rate=0.01),\n",
+    "              loss=tf.keras.losses.CategoricalCrossentropy(), \n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "# train model\n",
+    "history = mlp_sgd_5.fit(X_train, y_train, batch_size=256, epochs=100, validation_data=(X_test, y_test), verbose=1)"
    ]
   }
  ],
