Add comments to notebook

--- a/mlp_class.ipynb
+++ b/mlp_class.ipynb
@@ -18,6 +18,7 @@
     "# load data\n",
     "(X_train, y_train), (X_test, y_test) = mnist.load_data()\n",
     "\n",
+    "# pre-process data\n",
     "X_train, y_train, X_test, y_test = utils.preprocess(X_train, y_train, X_test, y_test, num_classes, num_features, print_summary=False)"
    ]
   },
