Fine tuning model

--- a/mlp_class_fine_tunning.ipynb
+++ b/mlp_class_fine_tunning.ipynb
@@ -9,7 +9,11 @@
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "from tensorflow.keras.datasets import mnist\n",
+    "from tensorflow.keras import initializers\n",
+    "from tensorflow.keras import regularizers\n",
+    "from keras import Input\n",
     "import utils\n",
+    "import metrics\n",
     "\n",
     "# MNIST dataset params\n",
     "num_classes = 10 # 0-9 digits\n",
@@ -18,6 +22,7 @@
     "# load data\n",
     "(X_train, y_train), (X_test, y_test) = mnist.load_data()\n",
     "\n",
+    "# pre-process data\n",
     "X_train, y_train, X_test, y_test = utils.preprocess(X_train, y_train, X_test, y_test, num_classes, num_features, print_summary=False)"
    ]
   },
@@ -27,24 +32,93 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hidden layer sizes\n",
-    "n_hidden_1 = 128\n",
-    "n_hidden_2 = 256\n",
-    "\n",
     "# network loss function\n",
     "loss =tf.keras.losses.SparseCategoricalCrossentropy()\n",
     "\n",
     "# network metrics\n",
-    "metrics = ['accuracy']\n",
+    "eval_metrics = [metrics.f1]\n",
     "\n",
     "# training batch size\n",
     "batch_size = 256\n",
     "\n",
     "# training epochs\n",
-    "epochs = 100\n",
+    "epochs = 1000\n",
     "\n",
     "# print options during training\n",
-    "verbose = 0"
+    "verbose = 1\n",
+    "\n",
+    "# early stopping callback\n",
+    "callback = tf.keras.callbacks.EarlyStopping(monitor='loss', patience=200)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **$1$. Fine Tuning**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Search space summary\n",
+      "Default search space size: 3\n",
+      "units (Choice)\n",
+      "{'default': 64, 'conditions': [], 'values': [64, 128], 'ordered': True}\n",
+      "a_reg (Choice)\n",
+      "{'default': 0.1, 'conditions': [], 'values': [0.1, 0.001, 1e-06], 'ordered': True}\n",
+      "learning_rate (Choice)\n",
+      "{'default': 0.1, 'conditions': [], 'values': [0.1, 0.01, 0.001], 'ordered': True}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import keras_tuner\n",
+    "\n",
+    "def build_model(hp):\n",
+    "\n",
+    "    # hyperparams\n",
+    "    n_hidden_1      =   hp.Choice(\"units\", [64, 128])\n",
+    "    n_hidden_2      =   hp.Choice(\"units\", [256, 512])\n",
+    "    a_reg           =   hp.Choice(\"a_reg\", [0.1, 0.001, 0.000001])\n",
+    "    learning_rate   =   hp.Choice(\"learning_rate\", [0.1, 0.01, 0.001])\n",
+    "\n",
+    "    # mlp model\n",
+    "    mlp_rmsprop_ft = keras.Sequential(name=\"MLP_RMSProp_FT\")\n",
+    "\n",
+    "    mlp_rmsprop_ft.add(Input(shape=(num_features,)))\n",
+    "\n",
+    "    mlp_rmsprop_ft.add(keras.layers.Dense(name=\"hidden_layer_1\", units=n_hidden_1, activation=\"relu\", \n",
+    "                        kernel_regularizer=regularizers.l2(a_reg), kernel_initializer=initializers.HeNormal()))\n",
+    "\n",
+    "    mlp_rmsprop_ft.add(keras.layers.Dense(name=\"hidden_layer_2\", units=n_hidden_2, activation=\"relu\", \n",
+    "                        kernel_regularizer=regularizers.l2(a_reg), kernel_initializer=initializers.HeNormal()))\n",
+    "\n",
+    "    mlp_rmsprop_ft.add(keras.layers.Dense(name=\"output_layer\", units=num_classes, activation=\"softmax\", \n",
+    "                        kernel_regularizer=regularizers.l2(a_reg), kernel_initializer=initializers.HeNormal()))\n",
+    "    \n",
+    "    mlp_rmsprop_ft.compile(optimizer=tf.keras.optimizers.RMSprop(learning_rate=learning_rate),\n",
+    "                            loss=loss, \n",
+    "                            metrics=eval_metrics)\n",
+    "    \n",
+    "    return mlp_rmsprop_ft\n",
+    "\n",
+    "tuner = keras_tuner.BayesianOptimization(\n",
+    "    hypermodel=build_model,\n",
+    "    objective=\"val_loss\",\n",
+    "    max_trials=1000,\n",
+    "    overwrite=True,\n",
+    "    directory=\"tuning\",\n",
+    "    project_name=\"mlp_tuning\",\n",
+    ")\n",
+    "\n",
+    "# tuner.search_space_summary()"
    ]
   },
   {
@@ -53,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a_reg = 0.01"
+    "tuner.search(X_train, y_train, epochs=epochs, batch_size=batch_size, validation_data=(X_test, y_test), verbose=verbose, callbacks=[callback])"
    ]
   },
   {
@@ -62,52 +136,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow import keras\n",
-    "from keras import Input\n",
-    "from tensorflow.keras import initializers\n",
-    "from tensorflow.keras import regularizers\n",
-    "\n",
-    "# create model\n",
-    "mlp_rmsprop_ft = keras.Sequential(name=\"MLP_RMSProp_FT\")\n",
-    "\n",
-    "mlp_rmsprop_ft.add(Input(shape=(num_features,)))\n",
-    "\n",
-    "mlp_rmsprop_ft.add(keras.layers.Dense(name=\"hidden_layer_1\", units=n_hidden_1, activation=\"relu\", \n",
-    "                    kernel_regularizer=regularizers.l2(a_reg), kernel_initializer=tf.keras.initializers.HeNormal()))\n",
-    "\n",
-    "mlp_rmsprop_ft.add(keras.layers.Dense(name=\"hidden_layer_2\", units=n_hidden_2, activation=\"relu\", \n",
-    "                    kernel_regularizer=regularizers.l2(a_reg), kernel_initializer=tf.keras.initializers.HeNormal()))\n",
-    "\n",
-    "mlp_rmsprop_ft.add(keras.layers.Dense(name=\"output_layer\", units=num_classes, activation=\"softmax\", \n",
-    "                    kernel_regularizer=regularizers.l2(a_reg), kernel_initializer=tf.keras.initializers.HeNormal()))\n",
-    "\n",
-    "mlp_rmsprop_ft.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# compile model\n",
-    "mlp_rmsprop_ft.compile(optimizer=tf.keras.optimizers.Adam(),\n",
-    "                loss=loss, \n",
-    "                metrics=metrics)\n",
-    "\n",
-    "# train model\n",
-    "mlp_rmsprop_ft_history = mlp_rmsprop_ft.fit(X_train, y_train, batch_size=batch_size, epochs=epochs, \n",
-    "                        validation_data=(X_test, y_test), verbose=verbose)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# display results\n",
-    "utils.disp_results(mlp_rmsprop_ft, X_train, y_train, X_test, y_test, mlp_rmsprop_ft_history)"
+    "best_model = tuner.get_best_models()[0]\n",
+    "best_model.summary()"
    ]
   }
  ],
