Update notebook - Fix names of hyperparams

--- a/mlp_class_fine_tunning.ipynb
+++ b/mlp_class_fine_tunning.ipynb
@@ -60,32 +60,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Search space summary\n",
-      "Default search space size: 3\n",
-      "units (Choice)\n",
-      "{'default': 64, 'conditions': [], 'values': [64, 128], 'ordered': True}\n",
-      "a_reg (Choice)\n",
-      "{'default': 0.1, 'conditions': [], 'values': [0.1, 0.001, 1e-06], 'ordered': True}\n",
-      "learning_rate (Choice)\n",
-      "{'default': 0.1, 'conditions': [], 'values': [0.1, 0.01, 0.001], 'ordered': True}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import keras_tuner\n",
     "\n",
     "def build_model(hp):\n",
     "\n",
     "    # hyperparams\n",
-    "    n_hidden_1      =   hp.Choice(\"units\", [64, 128])\n",
-    "    n_hidden_2      =   hp.Choice(\"units\", [256, 512])\n",
+    "    n_hidden_1      =   hp.Choice(\"units_1\", [64, 128])\n",
+    "    n_hidden_2      =   hp.Choice(\"units_2\", [256, 512])\n",
     "    a_reg           =   hp.Choice(\"a_reg\", [0.1, 0.001, 0.000001])\n",
     "    learning_rate   =   hp.Choice(\"learning_rate\", [0.1, 0.01, 0.001])\n",
     "\n",
@@ -112,13 +97,22 @@
     "tuner = keras_tuner.BayesianOptimization(\n",
     "    hypermodel=build_model,\n",
     "    objective=\"val_loss\",\n",
-    "    max_trials=1000,\n",
+    "    max_trials=50,\n",
     "    overwrite=True,\n",
     "    directory=\"tuning\",\n",
     "    project_name=\"mlp_tuning\",\n",
     ")\n",
     "\n",
-    "# tuner.search_space_summary()"
+    "# tuner = keras_tuner.RandomSearch(\n",
+    "#     hypermodel=build_model,\n",
+    "#     objective=\"val_loss\",\n",
+    "#     max_trials=12,\n",
+    "#     overwrite=True,\n",
+    "#     directory=\"tuning\",\n",
+    "#     project_name=\"mlp_tuning\",\n",
+    "# )\n",
+    "\n",
+    "tuner.search_space_summary()"
    ]
   },
   {
@@ -137,7 +131,12 @@
    "outputs": [],
    "source": [
     "best_model = tuner.get_best_models()[0]\n",
-    "best_model.summary()"
+    "best_hyperparameters = tuner.get_best_hyperparameters()[0]\n",
+    "best_model.summary()\n",
+    "print(best_hyperparameters.get(\"units_1\"))\n",
+    "print(best_hyperparameters.get(\"units_2\"))\n",
+    "print(best_hyperparameters.get(\"a_reg\"))\n",
+    "print(best_hyperparameters.get(\"learning_rate\"))\n"
    ]
   }
  ],
