--- a/mlp_class_fine_tunning.ipynb
+++ b/mlp_class_fine_tunning.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Digit Classifier MLP - Fine Tuning**\n",
+    "## *Gitopoulos Giorgos, 9344*\n",
+    "### *Computational Intelligence, ECE AUTh* - *August 2022*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As an extension of the previous part, we are going to tune some parameters of the model to find the optimal model. Subsequently, we are going to train and evaluate the optimal model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -62,6 +78,17 @@
    "metadata": {},
    "source": [
     "# **$1$. Fine Tuning**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We set *RMSProp* as optimizer and apply $L2$ regularization on each layer of the models. The initialization of the weights takes place using *He-Normalization*. The model consists of 2 hidden layers.\n",
+    "\n",
+    "The hyperparameters that are going to be tuned are the number of neurons of the hidden layers, the parameter $\\alpha$ of regularization and the learning rate of the optimizer.\n",
+    "\n",
+    "The total number of combinations for the given values of hyperparameters is 36. We use *Bayesian Optimization* from *Keras Tuner* and we suppose that in 20 trials, a good enough model is going to be found and we define this as optimal."
    ]
   },
   {
@@ -202,6 +229,13 @@
    "metadata": {},
    "source": [
     "# **$2$. Optimal Model**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are going to train the optimal model and present the *confusion matrix*. From the *confusion matrix* we will compute the metrics *accuracy*, *recall*, *precision* and *f-measure*. Also, we will provide the learning curves for training and testing datasets and we will comment oν the results."
    ]
   },
   {
@@ -2373,6 +2407,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "All the metrics have very satisfying values. False-positives and false-negatives are very few in comparison with the size of the dataset. \n",
+    "\n",
+    "Moreover, we notice that false-positives and false-negatives have the exact same value. This is expected, as for each wrong prediction, the numbers of both false-positives and false-negatives are increased by 1. For example, if the true label is \"3\" and the predicted label is \"9\", the model predicts that the digit is NOT \"3\": +1 FN and that it is \"9\": +1 FP. The other included predictions are 8 TN (NOT \"0\", NOT \"1\", etc...).\n",
+    "\n",
+    "Also, for each correct prediction, we get +1 TP and +9 TN. So, we expect \n",
+    "$$TN = 9 \\times TP + 8 \\times FP \\Leftrightarrow 125,676 = 9 \\times 13,676 + 8 \\times 324 $$\n",
+    "which is true, based on the *confustion matrix*.\n",
+    "\n",
+    "Last but not least, the sum of values of the *confusion matrix* is expected to be equal to 10 times of the number of samples, as for each sample, 10 values are added in the *confusion matrix*. For example, for a correct prediction, we add +1 TP and +9 TN, while for a wrong prediction, we add +1 FP, +1 FN and +8 TN. We have $$ sum = 10 \\times num\\_of\\_testing\\_samples \\Leftrightarrow num\\_of\\_testing\\_samples = 140,000 \\div 10$$\n",
+    "which is true, as *MNIST* dataset has a total of 70,000 images and we use the 20% of them for testing, so the number of testing samples is 14,000."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### $ii)$ Learning Curves"
    ]
   },
@@ -2433,6 +2483,13 @@
     "plt.grid()\n",
     "plt.savefig(\"fig/\" + mlp_rmsprop_opt.name + \"_F1.jpg\", dpi=1200)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The learning curves show great performance. The loss curves are lower than every case of the previous part where we used *RMSProp*, while the accuracy is higher. Overfitting is totally prevented as all curves appear to be stable even after 1,000 training epochs. Testing curves present higher variation, but they remain between logical bounds. However, we can see that the model almost reaches its peak performance very early (in the first 200 epochs)."
    ]
   }
  ],
