--- a/mlp_class_fine_tunning.ipynb
+++ b/mlp_class_fine_tunning.ipynb
@@ -84,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We set *RMSProp* as optimizer and apply $L2$ regularization on each layer of the models. The initialization of the weights takes place using *He-Normalization*. The model consists of 2 hidden layers.\n",
+    "We set *RMSProp* as optimizer and apply $L2$ regularization on each layer of the model. The initialization of the weights takes place using *He-Normalization*. The model consists of 2 hidden layers.\n",
     "\n",
     "The hyperparameters that are going to be tuned are the number of neurons of the hidden layers, the parameter $\\alpha$ of regularization and the learning rate of the optimizer.\n",
     "\n",
@@ -235,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are going to train the optimal model and present the *confusion matrix*. From the *confusion matrix* we will compute the metrics *accuracy*, *recall*, *precision* and *f-measure*. Also, we will provide the learning curves for training and testing datasets and we will comment oν the results."
+    "We are going to train the optimal model and present the *confusion matrix*. From the *confusion matrix* we will compute the metrics *accuracy*, *recall*, *precision* and *f-measure*. Also, we will provide the learning curves for training and testing datasets and we will comment on the results."
    ]
   },
   {
@@ -2489,7 +2489,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The learning curves show great performance. The loss curves are lower than every case of the previous part where we used *RMSProp*, while the accuracy is higher. Overfitting is totally prevented as all curves appear to be stable even after 1,000 training epochs. Testing curves present higher variation, but they remain between logical bounds. However, we can see that the model almost reaches its peak performance very early (in the first 200 epochs)."
+    "The learning curves show great performance. The loss curves are lower than every case of the previous part where we used *RMSProp*, while the accuracy is higher. Overfitting is totally prevented as all curves appear to be stable even after 1,000 training epochs. Testing curves present higher variation, but they remain between logical bounds. Also, we can see that the model almost reaches its peak performance very early (in the first 200 epochs)."
    ]
   }
  ],
