--- a/mlp_class_fine_tunning.ipynb
+++ b/mlp_class_fine_tunning.ipynb
@@ -28,8 +28,8 @@
     "from tensorflow.keras import initializers\n",
     "from tensorflow.keras import regularizers\n",
     "from keras import Input\n",
-    "import utils\n",
-    "import metrics\n",
+    "from lib import utils\n",
+    "from lib import metrics\n",
     "\n",
     "# MNIST dataset params\n",
     "num_classes = 10 # 0-9 digits\n",
